<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CountriesListActivity">


    <ImageView
        android:id="@+id/flag"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/flag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/countryNativeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/countryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/sortByName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/countryNativeName"
        android:layout_margin="10dp"
        android:text="@string/sort_by_name"
        android:textSize="16sp"
        android:padding="5dp"

        />

    <ImageView
        android:id="@+id/sortByNameArrow"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/arrow_down"
        app:layout_constraintStart_toEndOf="@id/sortByName"
        app:layout_constraintTop_toTopOf="@id/sortByName"
        app:layout_constraintBottom_toBottomOf="@id/sortByName"
        android:layout_margin="5dp"
        android:visibility="gone"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryNativeName"
        />

    <TextView
        android:id="@+id/sortBySize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryNativeName"
        android:layout_margin="10dp"
        android:text="@string/sort_by_size"
        android:textSize="16sp"
        android:padding="5dp"

        />

    <ImageView
        android:id="@+id/sortBySizeArrow"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/arrow_down"
        app:layout_constraintStart_toEndOf="@id/sortBySize"
        app:layout_constraintTop_toTopOf="@id/sortBySize"
        app:layout_constraintBottom_toBottomOf="@id/sortBySize"
        android:layout_margin="5dp"
        android:visibility="gone"

        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sortBySize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noCountries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/no_country_alert"
            />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"
            android:layout_marginTop="10dp"
            android:text="@string/no_border_countries"
            android:textColor="@color/red"
            android:gravity="center_horizontal"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>